[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wine-tasting-mcp"
version = "1.0.0"
description = "MCP server translating wine tasting vocabulary into visual parameters"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Dal", email = "dal@example.com"}
]
license = {text = "MIT"}

dependencies = [
    "fastmcp>=0.1.0",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wine_tasting_mcp*"]

[project.scripts]
wine-tasting-mcp = "server:main"
